# ChangeLog for dev-ml/lablgtk
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/lablgtk/ChangeLog,v 1.17 2004/05/28 20:56:38 kugelfang Exp $

  28 May 2004; Danny van Dyk <kugelfang@gentoo.org> lablgtk-1.2.3.ebuild,
  lablgtk-1.2.5.ebuild, lablgtk-1.2.6.ebuild, lablgtk-2.2.0.ebuild:
  Marked -amd64 as dependencies aren't fulfilled anymore.

  11 May 2004; Guy Martin <gmsoft@gentoo.org> :
  Marked stable on hppa.

  17 Apr 2004; Travis Tilley <lv@gentoo.org> lablgtk-1.2.3.ebuild,
  lablgtk-1.2.5.ebuild, lablgtk-1.2.6.ebuild, lablgtk-2.2.0.ebuild:
  added ~amd64 keyword

  22 Mar 2004; Matthieu Sozeau <mattam@gentoo.org> lablgtk-1.2.5.ebuild:
  Put 1.2.5 into stable on ppc.

  20 Mar 2004; Matthieu Sozeau <mattam@gentoo.org> lablgtk-1.2.6.ebuild:
  Update lablgl dependency (fix bug #45109).

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> lablgtk-1.2.5.ebuild,
  lablgtk-1.2.6.ebuild, lablgtk-2.2.0.ebuild:
  add ~alpha and ~ia64

*lablgtk-1.2.6 (03 Feb 2004)

  03 Feb 2004; Matthieu Sozeau <mattam@gentoo.org> lablgtk-1.2.6.ebuild,
  lablgtk-2.2.0.ebuild:
  1.2.6 version bump, all arches ~ keyworded. Fix depend in 2.2.0 to allow
  >gtk-2.2 versions to be linked with lablgl (bug #31854).

  22 Jan 2004; Matthieu Sozeau <mattam@gentoo.org> lablgtk-1.2.3.ebuild:
  Forgot to say i added ~ppc keywords to 1.2.3 and 2.2.0.

*lablgtk-2.2.0 (22 Jan 2004)

  22 Jan 2004; Matthieu Sozeau <mattam@gentoo.org> lablgtk-1.2.3.ebuild,
  lablgtk-2.2.0.ebuild, metadata.xml:
  New version for gtk+2, incompatible with lablgtk 1 but the two can coexist
    peacefully. Also added metadata file.

  26 Dec 2003; Jason Wever <weeve@gentoo.org> lablgtk-1.2.5.ebuild:
  Marked stable on sparc to fix broken net-misc/unison dependencies.

  24 Nov 2003; Jason Wever <weeve@gentoo.org> lablgtk-1.2.3.ebuild,
  lablgtk-1.2.5.ebuild:
  Added ~sparc keyword.

*lablgtk-1.2.5 (25 Oct 2002)
