@@ -1,8 +1,8 @@
-MD5 7162edd029d3dc722e8eb4d3cf8d4bcb ChangeLog 2558
-MD5 25c1f803ea32c2ca62400091d759d78c lablgtk-1.2.3.ebuild 1252
-MD5 cf8430e273de645ea7303cc4894d1f81 lablgtk-1.2.5.ebuild 1274
-MD5 519f8aed136bbf378b7153b6be0fd5c5 lablgtk-1.2.6.ebuild 1281
-MD5 9c8817b8285811249def64c1b738c627 lablgtk-2.2.0.ebuild 1651
+MD5 9b884a4650ec61c0589eed283134e62a lablgtk-1.2.6.ebuild 1280
+MD5 1f67ca851ef2dba80c444b53246a5df1 lablgtk-1.2.3.ebuild 1238
+MD5 80081dfe8027aa4f0083ab5e5978aa14 lablgtk-1.2.5.ebuild 1273
+MD5 7d4505cd996bb6cf768a077117b95e35 lablgtk-2.2.0.ebuild 1650
+MD5 af11771f62e637e7616a676ff1a48f8f ChangeLog 2650
 MD5 845dbbef4eb685e1bfd5f9e13a03f2b8 metadata.xml 225
 MD5 424e314fd7cced60c111d5e2a220392b files/LablGTK-1.2.3-Makefile-destdir.patch 2124
 MD5 172783889b6b57cecf07de247ba7dcde files/digest-lablgtk-1.2.3 65
