@@ -1,6 +1,9 @@
 # ChangeLog for dev-ml/lablgtk
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/lablgtk/ChangeLog,v 1.17 2004/05/28 20:56:38 kugelfang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/lablgtk/ChangeLog,v 1.18 2004/06/03 17:11:56 agriffis Exp $
+
+  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> lablgtk-1.2.3.ebuild:
+  Fix use invocation
 
   28 May 2004; Danny van Dyk <kugelfang@gentoo.org> lablgtk-1.2.3.ebuild,
   lablgtk-1.2.5.ebuild, lablgtk-1.2.6.ebuild, lablgtk-2.2.0.ebuild:
